<resources>
    <string name="app_name">EasyMPG</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="display_name">Display Name</string>
    <string name="toyota">Toyota</string>
    <string name="make">Make</string>
    <string name="crushinator">Crushinator</string>
    <string name="model">Model</string>
    <string name="production_year">Production Year</string>
    <string name="current_odometer">Current Odometer</string>
    <string name="_6sprinter">6Sprinter</string>
    <string name="_2020">2020</string>
    <string name="_100000">100000</string>
    <string name="odometer_units">Odometer Units</string>
    <string name="km">KM</string>
    <string name="miles">Miles</string>
    <string name="default_fill_up_units">Default Fill Up Units %1$s</string>
    <string name="liters">Liters</string>
    <string name="us_gallon">US Gallon</string>
    <string name="imperial_gallon">Imperial Gallon</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="vehicleDisplayNameUsed">Display Name is already in use</string>
    <string name="previous_vehicle_from_list">Previous Vehicle From List</string>
    <string name="next_vehicle_from_saved_list">Next Vehicle From Saved List</string>
    <string name="odometer_value_is_less_then_previous_value">*Odometer Value is less then previous value</string>
    <string name="partial_fillup">Partial Fillup</string>
    <string name="fillup_in_different_unit">Fillup In Different Unit</string>
    <string name="missed_previous_fillup">Missed Previous Fillup</string>
    <string name="units">Units</string>
    <string name="total_cost">Total Cost</string>
    <string name="odometer">Odometer</string>
    <string name="date">Date</string>
    <string name="today">Today</string>
    <string name="fill_up_date">Fill Up Date:</string>
    <string name="cost_per_unit">Cost Per Unit</string>
    <string name="_50_50">$50.50</string>
    <string name="_3_50">$3.50</string>
    <string name="_123456789">123456789</string>
    <string name="units_defaulted_to">Units Defaulted to 1$</string>
    <string name="_40">40</string>
    <string name="add_fill_up">Add Fill Up</string>
</resources>