<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="160dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:isScrollContainer="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="10">

                <ImageButton
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/previous_vehicle_from_list"
                    android:src="@mipmap/baseline_navigate_before_black_48dp" />

                <TextView
                    android:id="@+id/textViewAddFillupVehicleHeader"
                    android:layout_width="216dp"
                    android:layout_height="34dp"
                    android:layout_weight="8"
                    android:gravity="center_horizontal"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/buttonAddFillUpNextVehicle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/next_vehicle_from_saved_list"
                    android:src="@mipmap/baseline_navigate_next_black_48dp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="-60dp"
                android:layout_marginTop="20dp"
                android:text="@string/fill_up_date" />

            <Button
                android:id="@+id/buttonAddFillupDate"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button_shape"
                android:ems="10"
                android:onClick="setDate"
                android:selectAllOnFocus="false"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/today"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="-60dp"
                android:layout_marginTop="20dp"
                android:text="@string/odometer" />

            <EditText
                android:id="@+id/editTextAddFillUpOdometer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:autofillHints=""
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/_123456789"
                android:inputType="number"
                android:maxLength="10" />

            <TextView
                android:id="@+id/addFuelDefaultHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="-60dp"
                android:layout_marginTop="20dp"
                android:text="@string/units_defaulted_to" />

            <EditText
                android:id="@+id/editTextAddFillUpUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:autofillHints=""
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/_40"
                android:inputType="numberDecimal"
                android:maxLength="7" />

            <CheckBox
                android:id="@+id/checkBoxFillUpDifferentValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="fillUpInDifferentUnitClicked"
                android:text="@string/fillup_in_different_unit" />

            <RadioGroup
                android:id="@+id/radioGroupFillUpFuelUnits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:visibility="gone">

                <RadioButton
                    android:id="@+id/radioButtonFillupLiters"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/liters"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RadioButton
                    android:id="@+id/radioButtonFillUpUSGallon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/us_gallon"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RadioButton
                    android:id="@+id/radioButtonFillUpImperialGallon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/imperial_gallon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="-35dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="3"
                    android:gravity="center_horizontal"
                    android:paddingStart="-50dp"
                    android:text="@string/total_cost" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="-55dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="3"
                    android:gravity="center_horizontal"
                    android:paddingStart="-60dp"
                    android:text="@string/cost_per_unit" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-20dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTextTotalCost"
                    android:layout_width="159dp"
                    android:layout_height="47dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="30dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:gravity="center_horizontal"
                    android:hint="@string/_50_50"
                    android:inputType="numberDecimal"
                    android:maxLength="7" />

                <EditText
                    android:id="@+id/editTextAddFillupCostPerUnit"
                    android:layout_width="159dp"
                    android:layout_height="47dp"
                    android:layout_marginStart="30dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/_3_50"
                    android:inputType="numberDecimal"
                    android:maxLength="7" />
            </LinearLayout>

            <Switch
                android:id="@+id/switchMissedPreviousFillup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:text="@string/missed_previous_fillup" />

            <Switch
                android:id="@+id/switchPartialFillup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/partial_fillup" />

            <TextView
                android:id="@+id/textViewAddFillUpOdometerWarning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/odometer_value_is_less_then_previous_value"
                android:textColor="#A82121"
                android:visibility="invisible" />

            <Button
                android:id="@+id/floatingActionButton"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/button_shape"
                android:onClick="addFillUpClicked"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/add_fill_up"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>